--- a/src/components/profile/Userprofile.css
+++ b/src/components/profile/Userprofile.css
@@ -325,23 +325,7 @@
 
 
 
-  .edit-profile-section > button {
-    width: 200px;
-    padding: 10px;
-    border-radius: 0px;
-    background-color: #007fff;
-    color: #fff;
-    border: 1px solid #fff;
-    font-size: 20px;
-    font-weight: 600;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
-    cursor: pointer;
-    outline: none;
-    margin: 5px auto;
-    border-radius: 10px;
-    }
+
 
 
   .profile-settings-section > button{
@@ -479,4 +463,22 @@
     margin : 2px auto;
   }
 
+  .edit-profile-section{
+    margin-right: 10px;
+    width: 150px;
+  }
+
+  .profile-settings-section{
+    /* margin-left: 10px; */
+    width: 150px;
+  }
+
+
+  .edit-profile-section > button, .profile-settings-section > button{
+   width: 150px;
+    font-size: 15px;
+    padding: 5px;
+  }
+
 }
+
